--- a/Attività svolta/Attivita_svolta.md.tmp.html
+++ b/Attività svolta/Attivita_svolta.md.tmp.html
@@ -121,13 +121,19 @@
 
 <h6>5 giorni</h6>
 
-<p><strong>Attività:</strong> Diverse tipologie di liste, tabelle, come inserire un immagine, lista dei tag fatti: <code>&lt;thead/&gt;</code> &amp; <code>&lt;tr/&gt;</code> &amp; <code>&lt;th/&gt;</code>, <code>&lt;tr/&gt;</code> &amp; <code>&lt;td/&gt;</code>, <code>&lt;img srs=" "/&gt;</code> <br />
+<h3>Aprile 5 ⤵️</h3>
+
+<p><strong>Attività:</strong> Diverse tipologie di liste, tabelle, come inserire un immagine, lista dei tag fatti: <code>&lt;thead/&gt;</code> &amp; <code>&lt;tr/&gt;</code> &amp; <code>&lt;th/&gt;</code>, <code>&lt;tr/&gt;</code> &amp; <code>&lt;td/&gt;</code>, <code>&lt;img src=" "/&gt;</code> <br />
 <strong>Esercizi di 5 aprile:</strong> <a href="https://github.com/plumkewe/scuola/tree/main/Attivit%C3%A0%20svolta/Aprile/5%20aprile">Creare una pagina HTML...</a></p>
 
 <h6>Purtroppo temporaneamente ho perso l'interesse nella scuola e nello studio di informatica, siamo andati avanti con HTML</h6>
 
 <p><br /></p>
 
-<p><strong>Esercizi di 9 maggio:</strong> <a href="https://github.com/plumkewe/scuola/tree/main/Attivit%C3%A0%20svolta/Maggio/Maggio%209">Crea in una cartella...</a>  <br /></p>
+<h3>Maggio 9 ⤵️</h3>
+
+<p><strong>Esercizi di 9 maggio:</strong> <a href="https://github.com/plumkewe/scuola/tree/main/Attivit%C3%A0%20svolta/Maggio/Maggio%209">Crea in una cartella...</a> <br /></p>
+
+<p><a href="https://htmlcolorcodes.com/color-names/"><code>✨</code> <strong>Colori</strong></a> <br /></p>
 
 <!-- Riempire un array 2D: [Con dei valori tutti uguali...](https://github.com/plumkewe/miei-codici/tree/main/Miei%20codici/Array/Array%202D/Modi%20di%20riemprire)  <br /> -->
