--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<meta name="language" content="it">
 		<meta name="geo.region" content="IT">
 		<meta name="geo.position" content="42.9256;10.5259">
+		
+		<meta property="og:image" content="prew.png">
 
 		
 		<title>SWAAA</title>
