--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="author" content="swaaa in persona">
 		<meta name="description" content="Una pagina che manifesta il mio hobby, quello di mappare i bit di una città che odio.">
-		<link rel="icon" href="favicon.svg">
+<!--	<link rel="icon" href="favicon64.jpg" type="image/png">-->
+<!--	<link rel="icon" href="favicon16.jpg" type="image/png">-->
 <!--	<meta name="viewpoint" content="width=800, height=600">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="language" content="it">
@@ -32,20 +33,28 @@
 		<header>
 			<h1>TEST</h1>
 		</header>
+		
 <!--	-->
 		<main>
 			
 			
 <!--		-->
-			<div id="map"></div>
-			<script src="mundos.js"></script>
+			<section class="map-container">
+				<div id="map"></div>
+				<script src="mundos.js"></script>
+			</section>
 <!--	    -->
+			
+			<section style="height: 500px;">
+				<p>voglio che quando clicco sul link il testo accanto rimanga fermo, voglio anche la mappa in stato inattivo che mi permetta di scrollare giù, e solo dopo un click/tap si attiva</p>
+			</section>
 			
 			
 		</main>
 <!--	-->
 		<footer>
 			<p>testando...</p>
+			<a href="webs.html">web 1.0</a>
 		</footer>
 	</body>
 </html>
